--- a/cs_wp/index.html
+++ b/cs_wp/index.html
@@ -157,7 +157,7 @@ http://www.templatemo.com/tm-395-urbanic
                              <div>
                                   <span class="templatemo-service-item-header">Hebebühnen</span>
                              </div>
-                             <img src="img/carpimg.png">
+                             <img src="images/carpimg.png">
                              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam </p>
                              <a href="#" class="btn read">WEITERE INFORMATIONEN</a>
                              <br class="clearfix">
@@ -170,7 +170,7 @@ http://www.templatemo.com/tm-395-urbanic
                              <div>
                                   <span class="templatemo-service-item-header">Stubbenfräsen - Holzhacker</span>
                              </div>
-                             <img src="img/grimg.png">
+                             <img src="images/grimg.png">
                              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam </p>
                              <a href="#" class="btn read">WEITERE INFORMATIONEN</a>
                              <br class="clearfix">
