--- a/cs_wp/index.html
+++ b/cs_wp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Urbanic Free Website Template</title>
+        <title>cs_wp</title>
         <meta name="keywords" content="" />
 		<meta name="description" content="" />
 <!--
